Changelog for Statocles

{{ $NEXT }}

0.081     2016-10-26 23:17:58-05:00 America/Chicago

    [Added]

    - Blog posts now have "Older" and "Newer" links so a reader can read
      a blog from start to finish, navigating through blog posts without
      having to return to the index page. Thanks @kbucheli! [Github
      #517]

      This is a theme change, so you will need to update your theme to
      see the older/newer links. See the Statocles default themes for
      examples.

0.080     2016-10-20 15:11:57-05:00 America/Chicago

    [Fixed]

    - Blog slugs (folder path) are now a bit neater: Apostriphes do not
      turn into dashes, and leading and trailing dashes are removed. So,
      where the blog post "It's good!" would have previously looked like
      "/2016/06/02/it-s-good-/", it will now look like
      "/2016/06/02/its-good/". Thanks @Ferki! [Github #507] [Github
      #508]

0.079     2016-10-14 20:49:24-05:00 America/Chicago

    [Other]

    - Now that Pod::Weaver 4.015 has shipped with fixes, recommend
      upgrading to 4.015 if the user has 4.014.

0.078     2016-10-12 14:30:18-05:00 America/Chicago

    [Fixed]

    - Multiple blog posts on the same day are now ordered by their
      `date` attribute. This makes the ordering predictable and
      changable, instead of being ordered alphabetically [Github #512].
      There will likely be some configuration additions here in the
      future to make the date formatting fit the blog's post frequency
      and groupings.

    [Other]

    - Ignore Pod::Weaver version 4.014. This version shipped with a bug
      that causes our tests to fail, likely causes weaving in the
      Perldoc app to throw a fatal error. You should downgrade to
      Pod::Weaver 4.013 (`cpanm Pod::Weaver 4.013`) or upgrade to
      Pod::Weaver 4.015 when that is released. [Github #513]

0.077 2016-08-06T01:24:56
 - fix new warning making test fail
 - fix tests for Mojolicious 7.0
 - add trim function